finished hassan_2019 and wrds2

--- a/nbs/wrds_utils.ipynb
+++ b/nbs/wrds_utils.ipynb
@@ -30,7 +30,7 @@
     "import os, glob \n",
     "\n",
     "import pandas as pd\n",
-    "import wrds "
+    "from finsets import wrds2 as wrds  "
    ]
   },
   {
@@ -56,7 +56,6 @@
     }
    ],
    "source": [
-    "#| eval: false\n",
     "db = wrds.Connection(wrds_username=os.getenv('WRDS_USERNAME'))"
    ]
   },
@@ -77,7 +76,6 @@
     }
    ],
    "source": [
-    "#| eval: false\n",
     "db.list_libraries()[:5]"
    ]
   },
@@ -98,7 +96,6 @@
     }
    ],
    "source": [
-    "#| eval: false\n",
     "db.list_tables(library='crsp')[:5]"
    ]
   },
@@ -111,7 +108,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Approximately 879510 rows in comp.funda.\n"
+      "Approximately 879534 rows in comp.funda.\n"
      ]
     },
     {
@@ -196,7 +193,6 @@
     }
    ],
    "source": [
-    "#| eval: false\n",
     "db.describe_table(library='comp',table='funda').iloc[:5]"
    ]
   },
@@ -293,7 +289,6 @@
     }
    ],
    "source": [
-    "#| eval: false\n",
     "db.get_table(library='ff', \n",
     "             table='factors_monthly',\n",
     "             columns=['date','mktrf','smb','hml','rf'],\n",
@@ -306,7 +301,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| eval: false\n",
     "db.close()"
    ]
   },
@@ -326,7 +320,7 @@
    "source": [
     "#| export\n",
     "def download(sql_string: str=None,\n",
-    "             wrds_username: str=None, #If None, looks for WRDS_USERNAME with `os.getenv`, then prompts you if needed\n",
+    "             wrds_username: str=None, #If None, looks for WRDS_USERNAME with `os.getenv`; prompts you if it can't find it\n",
     "             params: Sequence=None # Params cited in the `sql_string`\n",
     "             ) -> pd.DataFrame:\n",
     "    \"\"\"Downloads data from WRDS using the given PostgreSQL `sql_string`\"\"\"\n",
@@ -335,10 +329,238 @@
     "        wrds_username = os.getenv('WRDS_USERNAME')\n",
     "        if wrds_username is None: wrds_username = input(\"Enter your WRDS username: \") \n",
     "\n",
-    "    dbconn = wrds.Connection(wrds_username = wrds_username)\n",
-    "    try : df = dbconn.raw_sql(sql=sql_string, params=params)\n",
-    "    finally: dbconn.close() \n",
-    "    return df"
+    "    with wrds.Connection(wrds_username = wrds_username) as db:\n",
+    "        return db.raw_sql(sql=sql_string, params=params)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This function will prompt the user for their WRDS password, unless a `pgpass` file is set up."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>mktrf</th>\n",
+       "      <th>smb</th>\n",
+       "      <th>hml</th>\n",
+       "      <th>rf</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>umd</th>\n",
+       "      <th>dateff</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1926-07-01</td>\n",
+       "      <td>0.0296</td>\n",
+       "      <td>-0.0256</td>\n",
+       "      <td>-0.0243</td>\n",
+       "      <td>0.0022</td>\n",
+       "      <td>1926.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1926-07-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1926-08-01</td>\n",
+       "      <td>0.0264</td>\n",
+       "      <td>-0.0117</td>\n",
+       "      <td>0.0382</td>\n",
+       "      <td>0.0025</td>\n",
+       "      <td>1926.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1926-08-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1926-09-01</td>\n",
+       "      <td>0.0036</td>\n",
+       "      <td>-0.0140</td>\n",
+       "      <td>0.0013</td>\n",
+       "      <td>0.0023</td>\n",
+       "      <td>1926.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1926-09-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1926-10-01</td>\n",
+       "      <td>-0.0324</td>\n",
+       "      <td>-0.0009</td>\n",
+       "      <td>0.0070</td>\n",
+       "      <td>0.0032</td>\n",
+       "      <td>1926.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1926-10-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1926-11-01</td>\n",
+       "      <td>0.0253</td>\n",
+       "      <td>-0.0010</td>\n",
+       "      <td>-0.0051</td>\n",
+       "      <td>0.0031</td>\n",
+       "      <td>1926.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1926-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1158</th>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>0.0665</td>\n",
+       "      <td>0.0502</td>\n",
+       "      <td>-0.0405</td>\n",
+       "      <td>0.0035</td>\n",
+       "      <td>2023.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-0.1598</td>\n",
+       "      <td>2023-01-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1159</th>\n",
+       "      <td>2023-02-01</td>\n",
+       "      <td>-0.0258</td>\n",
+       "      <td>0.0121</td>\n",
+       "      <td>-0.0078</td>\n",
+       "      <td>0.0034</td>\n",
+       "      <td>2023.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0021</td>\n",
+       "      <td>2023-02-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1160</th>\n",
+       "      <td>2023-03-01</td>\n",
+       "      <td>0.0251</td>\n",
+       "      <td>-0.0559</td>\n",
+       "      <td>-0.0901</td>\n",
+       "      <td>0.0036</td>\n",
+       "      <td>2023.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>-0.0250</td>\n",
+       "      <td>2023-03-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1161</th>\n",
+       "      <td>2023-04-01</td>\n",
+       "      <td>0.0061</td>\n",
+       "      <td>-0.0334</td>\n",
+       "      <td>-0.0003</td>\n",
+       "      <td>0.0035</td>\n",
+       "      <td>2023.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0165</td>\n",
+       "      <td>2023-04-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1162</th>\n",
+       "      <td>2023-05-01</td>\n",
+       "      <td>0.0035</td>\n",
+       "      <td>0.0153</td>\n",
+       "      <td>-0.0780</td>\n",
+       "      <td>0.0036</td>\n",
+       "      <td>2023.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>-0.0063</td>\n",
+       "      <td>2023-05-31</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1163 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            date   mktrf     smb     hml      rf    year  month     umd  \\\n",
+       "0     1926-07-01  0.0296 -0.0256 -0.0243  0.0022  1926.0    7.0     NaN   \n",
+       "1     1926-08-01  0.0264 -0.0117  0.0382  0.0025  1926.0    8.0     NaN   \n",
+       "2     1926-09-01  0.0036 -0.0140  0.0013  0.0023  1926.0    9.0     NaN   \n",
+       "3     1926-10-01 -0.0324 -0.0009  0.0070  0.0032  1926.0   10.0     NaN   \n",
+       "4     1926-11-01  0.0253 -0.0010 -0.0051  0.0031  1926.0   11.0     NaN   \n",
+       "...          ...     ...     ...     ...     ...     ...    ...     ...   \n",
+       "1158  2023-01-01  0.0665  0.0502 -0.0405  0.0035  2023.0    1.0 -0.1598   \n",
+       "1159  2023-02-01 -0.0258  0.0121 -0.0078  0.0034  2023.0    2.0  0.0021   \n",
+       "1160  2023-03-01  0.0251 -0.0559 -0.0901  0.0036  2023.0    3.0 -0.0250   \n",
+       "1161  2023-04-01  0.0061 -0.0334 -0.0003  0.0035  2023.0    4.0  0.0165   \n",
+       "1162  2023-05-01  0.0035  0.0153 -0.0780  0.0036  2023.0    5.0 -0.0063   \n",
+       "\n",
+       "          dateff  \n",
+       "0     1926-07-31  \n",
+       "1     1926-08-31  \n",
+       "2     1926-09-30  \n",
+       "3     1926-10-30  \n",
+       "4     1926-11-30  \n",
+       "...          ...  \n",
+       "1158  2023-01-31  \n",
+       "1159  2023-02-28  \n",
+       "1160  2023-03-31  \n",
+       "1161  2023-04-28  \n",
+       "1162  2023-05-31  \n",
+       "\n",
+       "[1163 rows x 9 columns]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "download(\"SELECT * from ff.factors_monthly\")"
    ]
   },
   {
