--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -64,7 +64,7 @@
    "outputs": [],
    "source": [
     "import finsets as fds\n",
-    "import wrds"
+    "from finsets import wrds2 as wrds"
    ]
   },
   {
@@ -98,11 +98,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This will prompt you for your WRDS username and password. \n",
-    "\n",
-    "After you enter your credentials, if you don't have a pgpass file already set up, it will ask you if you want to do that. Hit `y` and it will be automatically created for you. After this, you will never have to input your WRDS password. \n",
-    "\n",
-    "You will still have to supply your WRDS username to functions that retrieve data from WRDS (all of them have a `wrds_username` parameter). You you don't want to supply the username either, save it under a `WRDS_USERNAME` environment variable. It will get fetched automatically with `os.getenv(\"WRDS_USERNAME\")`.\n",
+    "This will prompt you for your WRDS username and password. After you enter your credentials, if you don't have a `pgpass` file already set up, it will ask you if you want to do that. Hit `y` and it will be automatically created for you. After this, you will never have to input your WRDS password. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You will still have to supply your WRDS username to functions that retrieve data from WRDS (all of them have a `wrds_username` parameter). If you don't want to be prompted for the username for every download, save it under a `WRDS_USERNAME` environment variable:\n",
+    "- On Windows, in a Command Prompt: \n",
+    "    - ```setx WRDS_USERNAME \"your_wrds_username_here\"```\n",
+    "- On Linux, in a terminal: \n",
+    "    - `echo 'export WRDS_USERNAME=\"your_wrds_username_here\"' >> ~/.bashrc && source ~/.bashrc`\n",
+    "- On macOS, since macOS Catalina:\n",
+    "    - `echo 'export WRDS_USERNAME=\"your_wrds_username_here\"' >> ~/.zshrc && source ~/.szhrc`\n",
+    "- On macOS, prior to macOS Catalina:\n",
+    "    - `echo 'export WRDS_USERNAME=\"your_wrds_username_here\"' >> ~/.bash_profile && source ~/.bash_profile`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "The functions in the `wrds_` modules will close database connections to WRDS automatically. However, if you open a connection manually, as above (with `wrds.Connection()`) make sure you remember to close that connection. In our example above:"
    ]
