--- a/nbs/wrds2.ipynb
+++ b/nbs/wrds2.ipynb
@@ -43,7 +43,7 @@
     "import pandas as pd\n",
     "import sqlalchemy as sa\n",
     "import urllib.parse\n",
-    "from wrds import __version__ as wrds_version"
+    "from sys import version_info"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "version_info = '3.1.16'\n",
+    "wrds_version = '3.1.16'\n",
     "\n",
     "appname = \"{0} python {1}.{2}.{3}/wrds {4}\".format(\n",
     "    sys.platform, version_info[0], version_info[1], version_info[2], wrds_version\n",
