--- a/nbs/wrds_crspm.ipynb
+++ b/nbs/wrds_crspm.ipynb
@@ -39,10 +39,10 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import wrds\n",
     "\n",
     "import pandasmore as pdm\n",
-    "from finsets import wrds_utils"
+    "from finsets import wrds_utils\n",
+    "from finsets import wrds2 as wrds  "
    ]
   },
   {
