fixed test.yaml to include reference to wrds_pass

--- a/nbs/hassan_2019_qje.ipynb
+++ b/nbs/hassan_2019_qje.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hassan, Hollander, van Lent, and Tahoun (2019)\n",
+    "# Hassan, et al. (2019)\n",
     "\n",
     "> Firm-level risk and sentiment derived from quarterly earnings conference calls"
    ]
