--- a/nbs/wrds_compa.ipynb
+++ b/nbs/wrds_compa.ipynb
@@ -40,7 +40,8 @@
     "import numpy as np\n",
     "\n",
     "import pandasmore as pdm\n",
-    "from finsets import wrds_utils"
+    "from finsets import wrds_utils\n",
+    "from finsets import wrds2 as wrds  "
    ]
   },
   {
