--- a/nbs/wrds_links.ipynb
+++ b/nbs/wrds_links.ipynb
@@ -37,7 +37,8 @@
     "import pandas as pd\n",
     "\n",
     "import pandasmore as pdm\n",
-    "from finsets import wrds_utils"
+    "from finsets import wrds_utils\n",
+    "from finsets import wrds2 as wrds  "
    ]
   },
   {
