reorganized package into  wrds, papers, and fred submodules

--- a/nbs/00_fred/00_fred.ipynb
+++ b/nbs/00_fred/00_fred.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This module is a very thin wrapper on the `fredapi2` module, which itself is a fork of [fredapi](https://github.com/mortada/fredapi)."
+    "This module is a (thin) wrapper on the `fred_api` module, which itself is a fork of [fredapi](https://github.com/mortada/fredapi)."
    ]
   },
   {
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp fred"
+    "#| default_exp fred.fred"
    ]
   },
   {
@@ -49,7 +49,7 @@
     "import os\n",
     "\n",
     "import pandas as pd\n",
-    "from finsets.fredapi2 import Fred\n",
+    "from finsets.fred.fred_api import Fred\n",
     "\n",
     "import pandasmore as pdm"
    ]
@@ -225,8 +225,8 @@
      "data": {
       "text/plain": [
        "id                                                                         GDP\n",
-       "realtime_start                                                      2023-07-07\n",
-       "realtime_end                                                        2023-07-07\n",
+       "realtime_start                                                      2023-07-11\n",
+       "realtime_end                                                        2023-07-11\n",
        "title                                                   Gross Domestic Product\n",
        "observation_start                                                   1947-01-01\n",
        "observation_end                                                     2023-01-01\n",
@@ -259,18 +259,18 @@
    "source": [
     "#| export \n",
     "def search(search_text: str=None, # What to search for\n",
-    "              nr_results: int=5, # How many results to output\n",
+    "              order_by: str='popularity', # How to order search results; try `search_rank` if you don't find what you were looking for\n",
+    "              nr_results: int=10, # How many results to output\n",
     "              api_key: str=None # FRED api key. If None, will use os.getenv(\"FRED_API_KEY\")\n",
     "              ) -> pd.DataFrame:\n",
     "    \"\"\"Search FRED for a given `search_text`, sort by popularity and return only the first `nr_results`\"\"\"\n",
     "\n",
     "    if api_key is None: api_key = os.getenv(\"FRED_API_KEY\")\n",
     "    api = Fred(api_key=api_key)  \n",
-    "    return api.search(search_text)\\\n",
-    "              .assign(popularity = lambda x: x.popularity.astype('Int64'))\\\n",
-    "              .sort_values('popularity', ascending=False)\\\n",
+    "    return api.search(search_text, order_by=order_by)\\\n",
     "              .pipe(pdm.order_columns, ['title', 'popularity','frequency_short', 'observation_start', 'observation_end'])\\\n",
-    "              .iloc[:nr_results]"
+    "              .iloc[:nr_results]\n",
+    "              "
    ]
   },
   {
@@ -338,13 +338,13 @@
        "    <tr>\n",
        "      <th>TB3MS</th>\n",
        "      <td>3-Month Treasury Bill Secondary Market Rate, D...</td>\n",
-       "      <td>77</td>\n",
+       "      <td>76</td>\n",
        "      <td>M</td>\n",
        "      <td>1934-01-01</td>\n",
        "      <td>2023-06-01</td>\n",
        "      <td>TB3MS</td>\n",
-       "      <td>2023-07-07</td>\n",
-       "      <td>2023-07-07</td>\n",
+       "      <td>2023-07-11</td>\n",
+       "      <td>2023-07-11</td>\n",
        "      <td>Monthly</td>\n",
        "      <td>Percent</td>\n",
        "      <td>%</td>\n",
@@ -356,19 +356,19 @@
        "    <tr>\n",
        "      <th>DTB3</th>\n",
        "      <td>3-Month Treasury Bill Secondary Market Rate, D...</td>\n",
-       "      <td>75</td>\n",
+       "      <td>74</td>\n",
        "      <td>D</td>\n",
        "      <td>1954-01-04</td>\n",
-       "      <td>2023-07-05</td>\n",
+       "      <td>2023-07-07</td>\n",
        "      <td>DTB3</td>\n",
-       "      <td>2023-07-07</td>\n",
-       "      <td>2023-07-07</td>\n",
+       "      <td>2023-07-11</td>\n",
+       "      <td>2023-07-11</td>\n",
        "      <td>Daily</td>\n",
        "      <td>Percent</td>\n",
        "      <td>%</td>\n",
        "      <td>Not Seasonally Adjusted</td>\n",
        "      <td>NSA</td>\n",
-       "      <td>2023-07-06 15:21:05-05:00</td>\n",
+       "      <td>2023-07-10 15:22:06-05:00</td>\n",
        "      <td>Discount Basis</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -377,16 +377,16 @@
        "      <td>73</td>\n",
        "      <td>D</td>\n",
        "      <td>1981-09-01</td>\n",
-       "      <td>2023-07-05</td>\n",
+       "      <td>2023-07-07</td>\n",
        "      <td>DGS3MO</td>\n",
-       "      <td>2023-07-07</td>\n",
-       "      <td>2023-07-07</td>\n",
+       "      <td>2023-07-11</td>\n",
+       "      <td>2023-07-11</td>\n",
        "      <td>Daily</td>\n",
        "      <td>Percent</td>\n",
        "      <td>%</td>\n",
        "      <td>Not Seasonally Adjusted</td>\n",
        "      <td>NSA</td>\n",
-       "      <td>2023-07-06 15:20:13-05:00</td>\n",
+       "      <td>2023-07-10 15:21:14-05:00</td>\n",
        "      <td>For further information regarding treasury con...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -394,23 +394,23 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                       title  popularity  \\\n",
-       "series id                                                                  \n",
-       "TB3MS      3-Month Treasury Bill Secondary Market Rate, D...          77   \n",
-       "DTB3       3-Month Treasury Bill Secondary Market Rate, D...          75   \n",
-       "DGS3MO     Market Yield on U.S. Treasury Securities at 3-...          73   \n",
+       "                                                       title popularity  \\\n",
+       "series id                                                                 \n",
+       "TB3MS      3-Month Treasury Bill Secondary Market Rate, D...         76   \n",
+       "DTB3       3-Month Treasury Bill Secondary Market Rate, D...         74   \n",
+       "DGS3MO     Market Yield on U.S. Treasury Securities at 3-...         73   \n",
        "\n",
        "          frequency_short observation_start observation_end      id  \\\n",
        "series id                                                             \n",
        "TB3MS                   M        1934-01-01      2023-06-01   TB3MS   \n",
-       "DTB3                    D        1954-01-04      2023-07-05    DTB3   \n",
-       "DGS3MO                  D        1981-09-01      2023-07-05  DGS3MO   \n",
+       "DTB3                    D        1954-01-04      2023-07-07    DTB3   \n",
+       "DGS3MO                  D        1981-09-01      2023-07-07  DGS3MO   \n",
        "\n",
        "          realtime_start realtime_end frequency    units units_short  \\\n",
        "series id                                                              \n",
-       "TB3MS         2023-07-07   2023-07-07   Monthly  Percent           %   \n",
-       "DTB3          2023-07-07   2023-07-07     Daily  Percent           %   \n",
-       "DGS3MO        2023-07-07   2023-07-07     Daily  Percent           %   \n",
+       "TB3MS         2023-07-11   2023-07-11   Monthly  Percent           %   \n",
+       "DTB3          2023-07-11   2023-07-11     Daily  Percent           %   \n",
+       "DGS3MO        2023-07-11   2023-07-11     Daily  Percent           %   \n",
        "\n",
        "               seasonal_adjustment seasonal_adjustment_short  \\\n",
        "series id                                                      \n",
@@ -421,8 +421,8 @@
        "                        last_updated  \\\n",
        "series id                              \n",
        "TB3MS      2023-07-03 15:23:09-05:00   \n",
-       "DTB3       2023-07-06 15:21:05-05:00   \n",
-       "DGS3MO     2023-07-06 15:20:13-05:00   \n",
+       "DTB3       2023-07-10 15:22:06-05:00   \n",
+       "DGS3MO     2023-07-10 15:21:14-05:00   \n",
        "\n",
        "                                                       notes  \n",
        "series id                                                     \n",
@@ -437,7 +437,174 @@
     }
    ],
    "source": [
-    "search(\"three month treasury bill\", nr_results=3)"
+    "search(\"three month treasury bill\", order_by='popularity',nr_results=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>frequency_short</th>\n",
+       "      <th>observation_start</th>\n",
+       "      <th>observation_end</th>\n",
+       "      <th>id</th>\n",
+       "      <th>realtime_start</th>\n",
+       "      <th>realtime_end</th>\n",
+       "      <th>frequency</th>\n",
+       "      <th>units</th>\n",
+       "      <th>units_short</th>\n",
+       "      <th>seasonal_adjustment</th>\n",
+       "      <th>seasonal_adjustment_short</th>\n",
+       "      <th>last_updated</th>\n",
+       "      <th>notes</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>series id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>TB3MS</th>\n",
+       "      <td>3-Month Treasury Bill Secondary Market Rate, D...</td>\n",
+       "      <td>76</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1934-01-01</td>\n",
+       "      <td>2023-06-01</td>\n",
+       "      <td>TB3MS</td>\n",
+       "      <td>2023-07-11</td>\n",
+       "      <td>2023-07-11</td>\n",
+       "      <td>Monthly</td>\n",
+       "      <td>Percent</td>\n",
+       "      <td>%</td>\n",
+       "      <td>Not Seasonally Adjusted</td>\n",
+       "      <td>NSA</td>\n",
+       "      <td>2023-07-03 15:23:09-05:00</td>\n",
+       "      <td>Averages of Business Days, Discount Basis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DTB3</th>\n",
+       "      <td>3-Month Treasury Bill Secondary Market Rate, D...</td>\n",
+       "      <td>74</td>\n",
+       "      <td>D</td>\n",
+       "      <td>1954-01-04</td>\n",
+       "      <td>2023-07-07</td>\n",
+       "      <td>DTB3</td>\n",
+       "      <td>2023-07-11</td>\n",
+       "      <td>2023-07-11</td>\n",
+       "      <td>Daily</td>\n",
+       "      <td>Percent</td>\n",
+       "      <td>%</td>\n",
+       "      <td>Not Seasonally Adjusted</td>\n",
+       "      <td>NSA</td>\n",
+       "      <td>2023-07-10 15:22:06-05:00</td>\n",
+       "      <td>Discount Basis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WTB3MS</th>\n",
+       "      <td>3-Month Treasury Bill Secondary Market Rate, D...</td>\n",
+       "      <td>39</td>\n",
+       "      <td>W</td>\n",
+       "      <td>1954-01-08</td>\n",
+       "      <td>2023-07-07</td>\n",
+       "      <td>WTB3MS</td>\n",
+       "      <td>2023-07-11</td>\n",
+       "      <td>2023-07-11</td>\n",
+       "      <td>Weekly, Ending Friday</td>\n",
+       "      <td>Percent</td>\n",
+       "      <td>%</td>\n",
+       "      <td>Not Seasonally Adjusted</td>\n",
+       "      <td>NSA</td>\n",
+       "      <td>2023-07-10 15:17:12-05:00</td>\n",
+       "      <td>Averages of Business Days, Discount Basis</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                       title popularity  \\\n",
+       "series id                                                                 \n",
+       "TB3MS      3-Month Treasury Bill Secondary Market Rate, D...         76   \n",
+       "DTB3       3-Month Treasury Bill Secondary Market Rate, D...         74   \n",
+       "WTB3MS     3-Month Treasury Bill Secondary Market Rate, D...         39   \n",
+       "\n",
+       "          frequency_short observation_start observation_end      id  \\\n",
+       "series id                                                             \n",
+       "TB3MS                   M        1934-01-01      2023-06-01   TB3MS   \n",
+       "DTB3                    D        1954-01-04      2023-07-07    DTB3   \n",
+       "WTB3MS                  W        1954-01-08      2023-07-07  WTB3MS   \n",
+       "\n",
+       "          realtime_start realtime_end              frequency    units  \\\n",
+       "series id                                                               \n",
+       "TB3MS         2023-07-11   2023-07-11                Monthly  Percent   \n",
+       "DTB3          2023-07-11   2023-07-11                  Daily  Percent   \n",
+       "WTB3MS        2023-07-11   2023-07-11  Weekly, Ending Friday  Percent   \n",
+       "\n",
+       "          units_short      seasonal_adjustment seasonal_adjustment_short  \\\n",
+       "series id                                                                  \n",
+       "TB3MS               %  Not Seasonally Adjusted                       NSA   \n",
+       "DTB3                %  Not Seasonally Adjusted                       NSA   \n",
+       "WTB3MS              %  Not Seasonally Adjusted                       NSA   \n",
+       "\n",
+       "                        last_updated  \\\n",
+       "series id                              \n",
+       "TB3MS      2023-07-03 15:23:09-05:00   \n",
+       "DTB3       2023-07-10 15:22:06-05:00   \n",
+       "WTB3MS     2023-07-10 15:17:12-05:00   \n",
+       "\n",
+       "                                               notes  \n",
+       "series id                                             \n",
+       "TB3MS      Averages of Business Days, Discount Basis  \n",
+       "DTB3                                  Discount Basis  \n",
+       "WTB3MS     Averages of Business Days, Discount Basis  "
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search(\"three month treasury bill\", order_by='search_rank',nr_results=3)"
    ]
   },
   {
