--- a/nbs/00_fred/01_fred_api.ipynb
+++ b/nbs/00_fred/01_fred_api.ipynb
@@ -5,9 +5,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# fredapi2\n",
+    "# fred_api\n",
     "\n",
-    "> Fork of `fredapi` package. See its documentation for more details [here](https://github.com/mortada/fredapi). "
+    "> Fork of `fredapi` package by Mortada Mehyar: https://github.com/mortada/fredapi"
    ]
   },
   {
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This fork fixes errors caused by out-of-range timestamps produced in `fredapi`. "
+    "This fork fixes errors caused by out-of-range timestamps produced in the original `fredapi` package (version 0.5.0)."
    ]
   },
   {
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp fredapi2"
+    "#| default_exp fred.fred_api"
    ]
   },
   {
@@ -35,7 +35,6 @@
    "source": [
     "#| export\n",
     "import os\n",
-    "import sys\n",
     "import xml.etree.ElementTree as ET\n",
     "import urllib.request as url_request\n",
     "import urllib.parse as url_parse\n",
@@ -54,7 +53,7 @@
     "urlopen = url_request.urlopen\n",
     "quote_plus = url_parse.quote_plus\n",
     "urlencode = url_parse.urlencode\n",
-    "HTTPError = url_error.HTTPError\n"
+    "HTTPError = url_error.HTTPError"
    ]
   },
   {
