--- a/nbs/01_wrds/01_crspm.ipynb
+++ b/nbs/01_wrds/01_crspm.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp wrds_crspm"
+    "#| default_exp wrds.crspm"
    ]
   },
   {
@@ -41,8 +41,7 @@
     "import numpy as np\n",
     "\n",
     "import pandasmore as pdm\n",
-    "from finsets import wrds_utils\n",
-    "from finsets import wrds2 as wrds  "
+    "from finsets.wrds import wrds_api"
    ]
   },
   {
@@ -54,6 +53,7 @@
     "#| export\n",
     "def default_raw_vars():\n",
     "    \"\"\"Default variables used in `download` if none are specified. Takes about 2 min to download.\"\"\"\n",
+    "    \n",
     "    return ['permno','permco','date',\n",
     "            'ret', 'retx', 'shrout', 'prc', \n",
     "            'shrcd', 'exchcd','siccd','ticker','cusip','ncusip']            "
@@ -91,6 +91,7 @@
     "    \"\"\"Downloads `vars` from `start_date` to `end_date` from WRDS crsp.msf and crsp.msenames libraries. \n",
     "        Creates `ret_adj` for delisting based on Shumway and Warther (1999) and Johnson and Zhao (2007)\"\"\"\n",
     "\n",
+    "#THIS SHOULD BE IN ITS OWN FUNCTION\n",
     "    if wrds_username is None:\n",
     "        wrds_username = os.getenv('WRDS_USERNAME')\n",
     "        if wrds_username is None: wrds_username = input(\"Enter your WRDS username: \") \n",
@@ -99,7 +100,7 @@
     "    vars = ['permno','permco','date','exchcd'] + [x for x in vars if x not in ['permno','permco','date','exchcd']]\n",
     "\n",
     "    # Figure out which `vars` come from the `msf` table and which come from the `msenames` table and add a. and b. prefixes\n",
-    "    db = wrds.Connection(wrds_username = wrds_username)\n",
+    "    db = wrds_api.Connection(wrds_username = wrds_username)\n",
     "    try:\n",
     "        all_msf_vars = list(db.describe_table('crsp','msf').name)\n",
     "        all_mse_vars = list(db.describe_table('crsp','msenames').name)\n",
@@ -109,6 +110,7 @@
     "    except:\n",
     "        raise RuntimeError(\"Something went wrong with a WRDS database connection\")\n",
     "    finally: db.close()\n",
+    "##########################################\n",
     "\n",
     "    sql_string = f\"\"\"SELECT {varlist_string},  c.dlstcd, c.dlret \n",
     "                        FROM crsp.msf AS a \n",
@@ -119,8 +121,9 @@
     "                            WHERE a.date BETWEEN '{start_date}' AND COALESCE(%(end)s, CURRENT_DATE) \n",
     "                \"\"\"\n",
     "    \n",
-    "    df = wrds_utils.download(sql_string, wrds_username=wrds_username, params={'end':end_date})\n",
+    "    df = wrds_api.download(sql_string, wrds_username=wrds_username, params={'end':end_date})\n",
     "\n",
+    "########################## THIS SHOULD BE IN ITS OWN FUNCTION\n",
     "    #Adjust for delisting returns using Shumway and Warther (1999) and Johnson and Zhao (2007)\n",
     "    df['npdelist'] = (df['dlstcd']==500) | df['dlstcd'].between(520,584)\n",
     "    df['dlret'] = np.where(df.dlret.isna() & df.npdelist & df.exchcd.isin([1,2]), -0.35, df.dlret)\n",
@@ -130,6 +133,7 @@
     "\n",
     "    df['ret_adj'] = (1 + df.ret) * (1 + df.dlret) - 1\n",
     "    df['ret_adj'] = np.where(df.ret_adj.isna() & (df.dlret!=0), df.dlret, df.ret_adj)\n",
+    "####################################################################\n",
     "\n",
     "    return df "
    ]
