--- a/nbs/01_wrds/03_compa.ipynb
+++ b/nbs/01_wrds/03_compa.ipynb
@@ -11,11 +11,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since this is a proprietary dataset, in the documentation below, I can not show any of the data that is being retrieved/generated (will show only column names)."
+    "Since WRDS is a subscription service, in the documentation below, I can not show any of the data that is being retrieved/generated (will show only column names)."
    ]
   },
   {
@@ -24,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp wrds_compa"
+    "#| default_exp wrds.compa"
    ]
   },
   {
@@ -40,8 +39,7 @@
     "import numpy as np\n",
     "\n",
     "import pandasmore as pdm\n",
-    "from finsets import wrds_utils\n",
-    "from finsets import wrds2 as wrds  "
+    "from finsets.wrds import wrds_api"
    ]
   },
   {
@@ -107,7 +105,7 @@
     "                            AND indfmt='INDL' AND datafmt='STD' AND popsrc='D' AND consol='C'\n",
     "                            AND datadate BETWEEN '{start_date}' AND COALESCE(%(end)s, CURRENT_DATE)\n",
     "                \"\"\"\n",
-    "    return wrds_utils.download(sql_string, wrds_username=wrds_username, params={'end':end_date})"
+    "    return wrds_api.download(sql_string, wrds_username=wrds_username, params={'end':end_date})"
    ]
   },
   {
