--- a/nbs/01_wrds/linking.ipynb
+++ b/nbs/01_wrds/linking.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# wrds_links\n",
+    "# linking\n",
     "\n",
     "> WRDS Concordances"
    ]
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since this is a proprietary dataset, in the documentation below, I can not show any of the data that is being retrieved/generated (will show only column names)."
+    "Since WRDS is a subscription service, in the documentation below, I can not show any of the data that is being retrieved/generated (will show only column names)."
    ]
   },
   {
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp wrds_links"
+    "#| default_exp wrds.linking"
    ]
   },
   {
@@ -37,8 +37,7 @@
     "import pandas as pd\n",
     "\n",
     "import pandasmore as pdm\n",
-    "from finsets import wrds_utils\n",
-    "from finsets import wrds2 as wrds  "
+    "from finsets.wrds import wrds_api"
    ]
   },
   {
@@ -81,7 +80,7 @@
     "                                                   AND c.linktype IN ('LU','LC') AND c.linkprim IN ('P','C')\n",
     "                                                   AND a.date BETWEEN c.linkdt AND COALESCE(c.linkenddt, CURRENT_DATE)\"\"\"\n",
     "    \n",
-    "    df = wrds_utils.download(sql_string, wrds_username)\n",
+    "    df = wrds_api.download(sql_string, wrds_username)\n",
     "    df = pdm.setup_panel(df, panel_ids='permno', time_var='date', freq='M',\n",
     "                         drop_index_duplicates=True, duplicates_which_keep='last')\n",
     "    df['gvkey'] = df['gvkey'].astype('string')\n",
@@ -234,7 +233,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "df"
+    "df.head(0)"
    ]
   },
   {
@@ -254,7 +253,7 @@
     "                            AND b.linktype IN ('LU','LC') AND b.linkprim IN ('P','C')\n",
     "                            AND indfmt='INDL' AND datafmt='STD' AND popsrc='D' AND consol='C'\"\"\"\n",
     "    \n",
-    "    df = wrds_utils.download(sql_string, wrds_username)\n",
+    "    df = wrds_api.download(sql_string, wrds_username)\n",
     "    df = pdm.setup_panel(df, panel_ids='permno', time_var='datadate', freq='A',\n",
     "                         drop_index_duplicates=True, duplicates_which_keep='last')\n",
     "    df['gvkey'] = df['gvkey'].astype('string')\n",
@@ -349,7 +348,7 @@
     "                            AND b.linktype IN ('LU','LC') AND b.linkprim IN ('P','C')\n",
     "                            AND indfmt='INDL' AND datafmt='STD' AND popsrc='D' AND consol='C'\"\"\"\n",
     "    \n",
-    "    df = wrds_utils.download(sql_string, wrds_username)\n",
+    "    df = wrds_api.download(sql_string, wrds_username)\n",
     "    df = pdm.setup_panel(df, panel_ids='permno', time_var='datadate', freq='Q',\n",
     "                         drop_index_duplicates=True, duplicates_which_keep='last')\n",
     "    df['gvkey'] = df['gvkey'].astype('string')\n",
