--- a/nbs/02_papers/hassan_etal_2019.ipynb
+++ b/nbs/02_papers/hassan_etal_2019.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp hassan_2019_qje"
+    "#| default_exp papers.hassan_etal_2019"
    ]
   },
   {
@@ -54,7 +54,7 @@
     "import pandas as pd\n",
     "\n",
     "import pandasmore as pdm\n",
-    "from finsets import wrds_links"
+    "from finsets import wrds"
    ]
   },
   {
@@ -604,7 +604,7 @@
     "                        drop_index_duplicates=True, duplicates_which_keep='last')\n",
     "    if not gvkey_permno_link: return df\n",
     "    else:    \n",
-    "      if gvkey_permno_link is True: gvkey_permno_link = wrds_links.gvkey_permno_q()\n",
+    "      if gvkey_permno_link is True: gvkey_permno_link = wrds.linking.gvkey_permno_q()\n",
     "      df = df.reset_index().merge(gvkey_permno_link, how=how, on=['gvkey','Qdate'])\n",
     "      return pdm.setup_panel(df, panel_ids='permno', dates_processed=True, freq='Q',\n",
     "                              drop_index_duplicates=True, duplicates_which_keep='last')"
