--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -63,8 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import finsets as fds\n",
-    "from finsets import wrds2 as wrds"
+    "import finsets as fds"
    ]
   },
   {
@@ -89,8 +88,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from finsets.wrds import wrds_api"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WRDS recommends setting up a .pgpass file.\n",
+      "You can create this file yourself at any time with the create_pgpass_file() function.\n",
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
     "#| eval: false\n",
-    "db = wrds.Connection()"
+    "db = wrds_api.Connection()"
    ]
   },
   {
@@ -107,6 +126,7 @@
    "metadata": {},
    "source": [
     "You will still have to supply your WRDS username to functions that retrieve data from WRDS (all of them have a `wrds_username` parameter). If you don't want to be prompted for the username for every download, save it under a `WRDS_USERNAME` environment variable:\n",
+    "\n",
     "- On Windows, in a Command Prompt: \n",
     "    - ```setx WRDS_USERNAME \"your_wrds_username_here\"```\n",
     "- On Linux, in a terminal: \n",
