--- a/nbs/01_wrds/wrds_api.ipynb
+++ b/nbs/01_wrds/wrds_api.ipynb
@@ -5,9 +5,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# wrds2\n",
+    "# wrds_api\n",
     "\n",
-    "> Fork of `wrds` package. See its documentation for more details [here](https://github.com/wharton/wrds). "
+    "> Fork of `wrds` package: https://github.com/wharton/wrds. See documentation of original package for more details."
    ]
   },
   {
@@ -15,9 +15,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a fork of version 3.1.6 of the `wrds` package. It allows user to store WRDS password as environment variable `WRDS_PASS` (e.g. in GitHub Actions secrets). This facilitates testing in the CI pipeline without having to create a `pgpass` file. For local use, the preferred method is to use a `pgpass` file, not an environment variable with the WRDS password.\n",
+    "This is a fork of version 3.1.6 of the `wrds` package. It allows users to store WRDS password as environment variable `WRDS_PASS` (e.g. in GitHub Actions secrets). This facilitates testing in the CI pipeline without having to create a `pgpass` file. For local use, the preferred method is to use a `pgpass` file, not an environment variable with the WRDS password.\n",
     "\n",
-    "When establishing a connection with WRDS database, `Connection` will first look for the `WRDS_PASS` environment variable. If it can't find it, it looks for a `pgpass` file. If it can't find it, it prompts the user for a password."
+    "When establishing a connection with WRDS database, `Connection` will first look for the `WRDS_PASS` environment variable. If it can't find it, it looks for a `pgpass` file. If it can't find it, it prompts the user for a password.\n",
+    "\n",
+    "Also added a `download` function which is a wrapper around the `Connection().raw_sql` method that manages the connection with WRDS for you (using a context manager)."
    ]
   },
   {
@@ -26,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp wrds2"
+    "#| default_exp wrds.wrds_api"
    ]
   },
   {
@@ -35,9 +37,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| hide\n",
     "#| export \n",
+    "from typing import Sequence\n",
     "import getpass\n",
-    "import os\n",
+    "import os, glob\n",
     "import sys\n",
     "import stat\n",
     "import pandas as pd\n",
@@ -52,6 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| hide\n",
     "#| export\n",
     "wrds_version = '3.1.16'\n",
     "\n",
@@ -702,6 +707,532 @@
     "                index_col=index_col,\n",
     "                date_cols=date_cols,\n",
     "            )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def download(sql_string: str=None,\n",
+    "             wrds_username: str=None, #If None, looks for WRDS_USERNAME with `os.getenv`; prompts you if it can't find it\n",
+    "             params: Sequence=None # Params cited in the `sql_string`\n",
+    "             ) -> pd.DataFrame:\n",
+    "    \"\"\"Downloads data from WRDS using the given PostgreSQL `sql_string`\"\"\"\n",
+    "\n",
+    "    if wrds_username is None:\n",
+    "        wrds_username = os.getenv('WRDS_USERNAME')\n",
+    "        if wrds_username is None: wrds_username = input(\"Enter your WRDS username: \") \n",
+    "\n",
+    "    with Connection(wrds_username = wrds_username) as db:\n",
+    "        return db.raw_sql(sql=sql_string, params=params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This function will prompt the user for their WRDS password, unless a `pgpass` file is set up."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>mktrf</th>\n",
+       "      <th>smb</th>\n",
+       "      <th>hml</th>\n",
+       "      <th>rf</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>umd</th>\n",
+       "      <th>dateff</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1926-07-01</td>\n",
+       "      <td>0.0296</td>\n",
+       "      <td>-0.0256</td>\n",
+       "      <td>-0.0243</td>\n",
+       "      <td>0.0022</td>\n",
+       "      <td>1926.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1926-07-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1926-08-01</td>\n",
+       "      <td>0.0264</td>\n",
+       "      <td>-0.0117</td>\n",
+       "      <td>0.0382</td>\n",
+       "      <td>0.0025</td>\n",
+       "      <td>1926.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1926-08-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1926-09-01</td>\n",
+       "      <td>0.0036</td>\n",
+       "      <td>-0.0140</td>\n",
+       "      <td>0.0013</td>\n",
+       "      <td>0.0023</td>\n",
+       "      <td>1926.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1926-09-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1926-10-01</td>\n",
+       "      <td>-0.0324</td>\n",
+       "      <td>-0.0009</td>\n",
+       "      <td>0.0070</td>\n",
+       "      <td>0.0032</td>\n",
+       "      <td>1926.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1926-10-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1926-11-01</td>\n",
+       "      <td>0.0253</td>\n",
+       "      <td>-0.0010</td>\n",
+       "      <td>-0.0051</td>\n",
+       "      <td>0.0031</td>\n",
+       "      <td>1926.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1926-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1158</th>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>0.0665</td>\n",
+       "      <td>0.0502</td>\n",
+       "      <td>-0.0405</td>\n",
+       "      <td>0.0035</td>\n",
+       "      <td>2023.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-0.1598</td>\n",
+       "      <td>2023-01-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1159</th>\n",
+       "      <td>2023-02-01</td>\n",
+       "      <td>-0.0258</td>\n",
+       "      <td>0.0121</td>\n",
+       "      <td>-0.0078</td>\n",
+       "      <td>0.0034</td>\n",
+       "      <td>2023.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0021</td>\n",
+       "      <td>2023-02-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1160</th>\n",
+       "      <td>2023-03-01</td>\n",
+       "      <td>0.0251</td>\n",
+       "      <td>-0.0559</td>\n",
+       "      <td>-0.0901</td>\n",
+       "      <td>0.0036</td>\n",
+       "      <td>2023.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>-0.0250</td>\n",
+       "      <td>2023-03-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1161</th>\n",
+       "      <td>2023-04-01</td>\n",
+       "      <td>0.0061</td>\n",
+       "      <td>-0.0334</td>\n",
+       "      <td>-0.0003</td>\n",
+       "      <td>0.0035</td>\n",
+       "      <td>2023.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0165</td>\n",
+       "      <td>2023-04-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1162</th>\n",
+       "      <td>2023-05-01</td>\n",
+       "      <td>0.0035</td>\n",
+       "      <td>0.0153</td>\n",
+       "      <td>-0.0780</td>\n",
+       "      <td>0.0036</td>\n",
+       "      <td>2023.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>-0.0063</td>\n",
+       "      <td>2023-05-31</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1163 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            date   mktrf     smb     hml      rf    year  month     umd  \\\n",
+       "0     1926-07-01  0.0296 -0.0256 -0.0243  0.0022  1926.0    7.0     NaN   \n",
+       "1     1926-08-01  0.0264 -0.0117  0.0382  0.0025  1926.0    8.0     NaN   \n",
+       "2     1926-09-01  0.0036 -0.0140  0.0013  0.0023  1926.0    9.0     NaN   \n",
+       "3     1926-10-01 -0.0324 -0.0009  0.0070  0.0032  1926.0   10.0     NaN   \n",
+       "4     1926-11-01  0.0253 -0.0010 -0.0051  0.0031  1926.0   11.0     NaN   \n",
+       "...          ...     ...     ...     ...     ...     ...    ...     ...   \n",
+       "1158  2023-01-01  0.0665  0.0502 -0.0405  0.0035  2023.0    1.0 -0.1598   \n",
+       "1159  2023-02-01 -0.0258  0.0121 -0.0078  0.0034  2023.0    2.0  0.0021   \n",
+       "1160  2023-03-01  0.0251 -0.0559 -0.0901  0.0036  2023.0    3.0 -0.0250   \n",
+       "1161  2023-04-01  0.0061 -0.0334 -0.0003  0.0035  2023.0    4.0  0.0165   \n",
+       "1162  2023-05-01  0.0035  0.0153 -0.0780  0.0036  2023.0    5.0 -0.0063   \n",
+       "\n",
+       "          dateff  \n",
+       "0     1926-07-31  \n",
+       "1     1926-08-31  \n",
+       "2     1926-09-30  \n",
+       "3     1926-10-30  \n",
+       "4     1926-11-30  \n",
+       "...          ...  \n",
+       "1158  2023-01-31  \n",
+       "1159  2023-02-28  \n",
+       "1160  2023-03-31  \n",
+       "1161  2023-04-28  \n",
+       "1162  2023-05-31  \n",
+       "\n",
+       "[1163 rows x 9 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "download(\"SELECT * from ff.factors_monthly\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## More examples using useful features of the `Connection` class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "db = Connection(wrds_username=os.getenv('WRDS_USERNAME'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['aha_sample', 'ahasamp', 'audit', 'audit_acct_os', 'audit_audit_comp']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "db.list_libraries()[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['acti', 'asia', 'asib', 'asic', 'asio']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "db.list_tables(library='crsp')[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Approximately 879534 rows in comp.funda.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>nullable</th>\n",
+       "      <th>type</th>\n",
+       "      <th>comment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>gvkey</td>\n",
+       "      <td>True</td>\n",
+       "      <td>VARCHAR(6)</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>datadate</td>\n",
+       "      <td>True</td>\n",
+       "      <td>DATE</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>fyear</td>\n",
+       "      <td>True</td>\n",
+       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>indfmt</td>\n",
+       "      <td>True</td>\n",
+       "      <td>VARCHAR(12)</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>consol</td>\n",
+       "      <td>True</td>\n",
+       "      <td>VARCHAR(2)</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       name  nullable              type comment\n",
+       "0     gvkey      True        VARCHAR(6)    None\n",
+       "1  datadate      True              DATE    None\n",
+       "2     fyear      True  DOUBLE_PRECISION    None\n",
+       "3    indfmt      True       VARCHAR(12)    None\n",
+       "4    consol      True        VARCHAR(2)    None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "db.describe_table(library='comp',table='funda').iloc[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>mktrf</th>\n",
+       "      <th>smb</th>\n",
+       "      <th>hml</th>\n",
+       "      <th>rf</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1926-07-01</td>\n",
+       "      <td>0.0296</td>\n",
+       "      <td>-0.0256</td>\n",
+       "      <td>-0.0243</td>\n",
+       "      <td>0.0022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1926-08-01</td>\n",
+       "      <td>0.0264</td>\n",
+       "      <td>-0.0117</td>\n",
+       "      <td>0.0382</td>\n",
+       "      <td>0.0025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1926-09-01</td>\n",
+       "      <td>0.0036</td>\n",
+       "      <td>-0.0140</td>\n",
+       "      <td>0.0013</td>\n",
+       "      <td>0.0023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1926-10-01</td>\n",
+       "      <td>-0.0324</td>\n",
+       "      <td>-0.0009</td>\n",
+       "      <td>0.0070</td>\n",
+       "      <td>0.0032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1926-11-01</td>\n",
+       "      <td>0.0253</td>\n",
+       "      <td>-0.0010</td>\n",
+       "      <td>-0.0051</td>\n",
+       "      <td>0.0031</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date   mktrf     smb     hml      rf\n",
+       "0  1926-07-01  0.0296 -0.0256 -0.0243  0.0022\n",
+       "1  1926-08-01  0.0264 -0.0117  0.0382  0.0025\n",
+       "2  1926-09-01  0.0036 -0.0140  0.0013  0.0023\n",
+       "3  1926-10-01 -0.0324 -0.0009  0.0070  0.0032\n",
+       "4  1926-11-01  0.0253 -0.0010 -0.0051  0.0031"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "db.get_table(library='ff', \n",
+    "             table='factors_monthly',\n",
+    "             columns=['date','mktrf','smb','hml','rf'],\n",
+    "             obs=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide \n",
+    "for f in glob.glob('../../data/*'): os.remove(f)\n",
+    "with open('../../data/.gitkeep', 'w') as f: pass "
    ]
   },
   {
